# mypackage

./: .flake8  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  mkdocs.yml  pyproject.toml  release.yml
.github/workflows/: ci.yml
mypackage/: __init__.py
tests/: test_divide.py
